--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="SpursSwap">
   <head>
     <meta charset="utf-8">
     <title>SeatSwap</title>
+    <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="/js/app.js"></script>
+    <base href="/" />
   </head>
-  <body>
-    <h1>SpursSwap</h1>
+  <body ng-controller="mainCtrl as main">
+    <nav>
+      <ul>
+        <li><a ui-sref="home">Home</a></li>
+        <li ng-hide="main.user"><a ui-sref="login">Login</a></li>
+        <li ng-hide="main.user"><a ui-sref="register">Register</a></li>
+        <li ng-show="main.user"><a ui-sref="usersShow({ id: main.user.id })">Profile</a></li>
+        <li ng-show="main.user"><a ng-click="main.logout()">Logout</a></li>
+      </ul>
+    </nav>
+    <main class="container" ui-view></main>
   </body>
 </html>
