--- a/index.html
+++ b/index.html
@@ -8,41 +8,48 @@
   <base href="/" />
 </head>
 <body ng-controller="mainCtrl as main">
-  <!-- <nav>
-    <ul>
-      <li><a ui-sref="home">Home</a></li>
-      <li ng-hide="main.user"><a ui-sref="login">Login</a></li>
-      <li ng-hide="main.user"><a ui-sref="register">Register</a></li>
-      <li ng-show="main.user"><a ui-sref="usersShow({ id: main.user.id })">Profile</a></li>
-      <li ng-show="main.user"><a ng-click="main.logout()">Logout</a></li>
-    </ul>
-  </nav> -->
-
-  <nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="http://i.imgur.com/9BtPHGX.png">
-          <img alt="Brand" src="http://i.imgur.com/VEcnukN.png">
-        </a>
-        <nav>
-          <ul>
-            <li><a ui-sref="home">Home</a></li>
-            <li ng-hide="main.user"><a ui-sref="login">Login</a></li>
-            <li ng-hide="main.user"><a ui-sref="register">Register</a></li>
-            <li ng-show="main.user"><a ui-sref="usersShow({ id: main.user.id })">Profile</a></li>
-            <li ng-show="main.user"><a ng-click="main.logout()">Logout</a></li>
-          </ul>
-        </nav>
-
-      </a>
-    </div>
-  </div>
-</nav>
-</div>
-</div>
-</nav>
-
-
-<main class="container" ui-view></main>
-</body>
-</html>
+  <header>
+    <nav class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" ui-sref="home">
+            <img alt="Brand" src="http://i.imgur.com/VMQ17AB.png">
+          </div>
+          <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav navbar-right">
+              <li ng-hide="main.user">
+                <a ui-sref="login">Login</a>
+              </li>
+              <li ng-hide="main.user">
+                <a ui-sref="register">Register</a>
+              </li>
+              <li ng-show="main.user">
+                <a ui-sref="gamesIndex">Find a game</a>
+              </li>
+              <li ng-show="main.user">
+                <a ui-sref="ticketsIndex">Browse tickets</a>
+              </li>
+              <li class="dropdown" ng-show="main.user">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Account <span class="caret"></span></a>
+                <ul class="dropdown-menu">
+                  <li><a ui-sref="usersShow({ id: main.user.id })">Profile</a></li>
+                  <li><a ui-sref="ticketsNew">Add Ticket</a></li>
+                </ul>
+              </li>
+              <li ng-show="main.user">
+                <a ng-click="main.logout()">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main class="container" ui-view></main>
+  </body>
+  </html>
