--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="https://fonts.googleapis.com/css?family=Bungee|Montserrat:700|Work+Sans" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <script type="text/javascript" src="/js/app.js"></script>
+  <link href="https://fonts.googleapis.com/css?family=Sarpanch" rel="stylesheet">
   <base href="/" />
 </head>
 <body ng-controller="mainCtrl as main">
